--- a/app/views/factory/in/productions/index.html.erb
+++ b/app/views/factory/in/productions/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'filter_form' %>
-<%# render 'filter_table' %>
+<%= render 'filter_table' %>
 
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @productions, as: :model %>
