--- a/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
@@ -3,8 +3,8 @@
     <%= image_tag model.logo, class: 'image is-32x32' if model.logo.attached? %>
     <span><%= model.name %></span>
   </div>
+  <p class="has-text-grey"><%= model.scene&.title %></p>
 </td>
-<td><%= model.scene&.title %></td>
 <td><%= model.products_count %></td>
 <td>
   <p>
@@ -37,10 +37,6 @@
 <th>
   <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
-    <label data-action="click->input#check"></label>
-  <% end %>
-  <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
-    <%= f.check_box :nav, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
     <label data-action="click->input#check"></label>
   <% end %>
 </th>
