--- a/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
@@ -1,6 +1,8 @@
 <th><%= Factory::ProductTaxon.human_attribute_name(:factory_taxon_id) %></th>
-<th><%= Factory::ProductTaxon.human_attribute_name(:name) %></th>
-<th><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></th>
+<th>
+  <p><%= Factory::ProductTaxon.human_attribute_name(:name) %></p>
+  <p><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></p>
+</th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></th>
 <th colspan="2"></th>
 <th>
