--- a/app/views/factory/admin/products/_buy/_production.html.erb
+++ b/app/views/factory/admin/products/_buy/_production.html.erb
@@ -17,7 +17,9 @@
   </td>
   <td>
   </td>
-  <td></td>
+  <td class="has-text-centered">
+    <%= render partial: 'purchase_cart', locals: { item_con: 'trade/in/items', model: model } %>
+  </td>
   <td>
     <%= link_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-solid fa-circle-info has-text-info"></i>
