--- a/app/views/factory/admin/products/_buy/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_thead.html.erb
@@ -2,9 +2,6 @@
   <p><%= Factory::Product.human_attribute_name(:name) %></p>
 </th>
 <th><%= Factory::Production.human_attribute_name(:cost_price) %></th>
-<td><%= Factory::Product.human_attribute_name(:description) %></td>
-<th>
-  <p><%= Factory::Product.human_attribute_name(:brand_id) %></p>
-  <p><%= Factory::Product.human_attribute_name(:serial_id) %></p>
-</th>
+<th><%= Factory::Product.human_attribute_name(:description) %></th>
+<th></th>
 <th></th>
