--- a/app/views/factory/in/provides/_base/_provider_search.html.erb
+++ b/app/views/factory/in/provides/_base/_provider_search.html.erb
@@ -9,7 +9,7 @@
         <%= search_field_tag 'name-like', nil, class: 'input', placeholder: '搜索', data: { typer_target: 'input' } %>
         <span class="icon is-left"><i class="fa-solid fa-search"></i></span>
       </div>
-      <div class="panel" id="providers_content"></div>
+      <div data-typer-target="content" class="panel" id="providers_content"></div>
     </div>
   </div>
 </div>
