--- a/app/views/factory/admin/purchase_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_index_tbody.html.erb
@@ -3,5 +3,5 @@
 <td><%= model.note %></td>
 <td><%= model.status_i18n %></td>
 <td>
-  <p><%= model.user.name %></p>
+  <p><%= model.member&.name %></p>
 </td>
