--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -6,6 +6,9 @@
         <%= link_to({ controller: 'production_plans', production_id: model.id }, aria: { label: t('factory.admin.production_plans.index.title') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-list has-text-info"></i>
         <% end %>
+        <%= link_to({ controller: 'purchase_items', production_id: model.id }, aria: { label: t('factory.admin.purchase_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
+          <i class="fa-solid fa-list has-text-info"></i>
+        <% end %>
         <%= link_to({ controller: 'production_items', production_id: model.id }, aria: { label: t('factory.admin.production_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-list has-text-success"></i>
         <% end %>
