--- a/app/views/factory/admin/purchase_items/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_breadcrumb.html.erb
@@ -5,6 +5,6 @@
     <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products', product_taxon_id: @production.product_taxon_id } %></li>
     <li><span class="px-3"><%= @production.product.name %></span></li>
     <li><%= link_to t('factory.admin.productions.index.title'), { controller: 'productions', product_id: @production.product_id } %></li>
-    <li class="is-active"><%= t('factory.admin.trade_items.index.title') %></li>
+    <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
