--- a/app/views/factory/admin/purchase_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_index_tbody.html.erb
@@ -1,7 +1,7 @@
 <td><%= model.number %></td>
 <td><%= model.amount.to_money.format.html_safe %></td>
 <td><%= model.note %></td>
-<td><%= model.status_i18n %></td>
+<td><%= model.purchase_status_i18n %></td>
 <td>
   <p><%= model.member&.name %></p>
 </td>
