--- a/app/views/factory/admin/purchase_items/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_index_thead.html.erb
@@ -1,7 +1,7 @@
 <th><%= Trade::Item.human_attribute_name(:number) %></th>
 <th><%= Trade::Item.human_attribute_name(:amount) %></th>
 <th><%= Trade::Item.human_attribute_name(:note) %></th>
-<th><%= Trade::Item.human_attribute_name(:status) %></th>
+<th><%= Trade::Item.human_attribute_name(:purchase_status) %></th>
 <th>
   <p><%= Trade::Item.human_attribute_name(:member_id) %></p>
   <p><%= Trade::Item.human_attribute_name(:member_organ_id) %></p>
