--- a/app/views/factory/admin/product_taxons/_all/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_all/_index_thead.html.erb
@@ -2,8 +2,4 @@
 <th><%= Factory::ProductTaxon.human_attribute_name(:name) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></th>
-<th>
-  <p><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></p>
-  <p><%= Factory::ProductTaxon.human_attribute_name(:nav) %></p>
-</th>
-<th><%= Factory::ProductTaxon.human_attribute_name(:partial) %></th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:nav) %></th>
