--- a/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
@@ -5,8 +5,5 @@
 </th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></th>
 <th colspan="2"></th>
-<th>
-  <p><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></p>
-  <p><%= Factory::ProductTaxon.human_attribute_name(:nav) %></p>
-</th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:partial) %></th>
