--- a/app/views/factory/admin/purchase_items/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_index_tr.html.erb
@@ -2,6 +2,9 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
+      <%= button_to({ action: 'update', id: model.id }, method: :patch, params: { item: { purchase_status: 'received' } }, aria: { label: t('factory.admin.purchase_items.update.title') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-tractor has-text-success"></i>
+      <% end %>
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
