add stock logic

--- a/app/views/factory/admin/productions/_period/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_period/_index_thead.html.erb
@@ -12,5 +12,7 @@
   <p><%= Factory::Production.human_attribute_name(:default) %></p>
   <p><%= Factory::Production.human_attribute_name(:presell) %></p>
 </th>
-<th><%= Factory::Production.human_attribute_name(:stock) %></th>
-<th><%= Factory::Production.human_attribute_name(:enabled) %></th>
+<th>
+  <p><%= Factory::Production.human_attribute_name(:enabled) %></p>
+  <p><%= Factory::Production.human_attribute_name(:automatic) %></p>
+</th>
