--- a/app/views/factory/admin/productions/_period/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_period/_index_tbody.html.erb
@@ -56,10 +56,13 @@
     <label data-action="click->input#check"></label>
   <% end %>
 </td>
-<td><%= model.stock %></td>
 <td>
   <%= form_with theme: nil, model: model, scope: :production, url: { action: 'update', id: model.id }, data: { controller: 'input', turbo_scroll: true } do |f| %>
     <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
+    <label data-action="click->input#check"></label>
+  <% end %>
+  <%= form_with theme: nil, model: model, scope: :production, url: { action: 'update', id: model.id }, data: { controller: 'input', turbo_scroll: true } do |f| %>
+    <%= f.check_box :automatic, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
     <label data-action="click->input#check"></label>
   <% end %>
 </td>
