--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -24,6 +24,9 @@
         <% end %>
       </div>
       <div class="mt-2">
+        <%= link_to({ controller: 'stock_logs', production_id: model.id }, aria: { label: t('factory.admin.stock_logs.index.title') }, class: 'button is-small is-rounded is-light') do %>
+          <i class="fa-solid fa-clock-rotate-left has-text-info"></i>
+        <% end %>
         <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-circle-info has-text-info"></i>
         <% end %>
