--- a/app/views/factory/admin/trade_items/index.html.erb
+++ b/app/views/factory/admin/trade_items/index.html.erb
@@ -2,7 +2,7 @@
 <%= render 'filter_table' %>
 
 <%= render layout: 'index_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @trade_items, as: :model %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @items, as: :model %>
 <% end %>
 
-<%= paginate @trade_items %>
+<%= paginate @items %>
