--- a/app/views/factory/admin/stock_logs/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/stock_logs/_index/_index_tbody.html.erb
@@ -1,10 +1,9 @@
 <td><%= model.title %></td>
 <td><%= model.tag_str %></td>
-<td>
-  <span><%= model.amount.to_money.format.html_safe %></span>
-</td>
+<td><%= model.amount %></td>
+<td><%= model.stock %></td>
 <td>
   <p><%= model.source_type %></p>
   <p><%= model.source_id %></p>
 </td>
-<td><time data-controller="time"><%= model.created_at.to_fs(:iso8601) %></time></td>
+<td><time data-controller="time" data-format="human"><%= model.created_at.to_fs(:iso8601) %></time></td>
