--- a/app/views/factory/admin/stock_logs/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/stock_logs/_index/_index_thead.html.erb
@@ -1,8 +1,9 @@
-<th><%= Trade::WalletLog.human_attribute_name(:title) %></th>
-<th><%= Trade::WalletLog.human_attribute_name(:tag_str) %></th>
-<th><%= Trade::WalletLog.human_attribute_name(:amount) %></th>
+<th><%= Factory::StockLog.human_attribute_name(:title) %></th>
+<th><%= Factory::StockLog.human_attribute_name(:tag_str) %></th>
+<th><%= Factory::StockLog.human_attribute_name(:amount) %></th>
+<th><%= Factory::StockLog.human_attribute_name(:stock) %></th>
 <th>
-  <p><%= Trade::WalletLog.human_attribute_name(:source_type) %></p>
-  <p><%= Trade::WalletLog.human_attribute_name(:source_id) %></p>
+  <p><%= Factory::StockLog.human_attribute_name(:source_type) %></p>
+  <p><%= Factory::StockLog.human_attribute_name(:source_id) %></p>
 </th>
-<th><%= Trade::WalletLog.human_attribute_name(:created_at) %></th>
+<th><%= Factory::StockLog.human_attribute_name(:created_at) %></th>
