--- a/app/views/factory/admin/product_taxons/_all/_factory_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_all/_factory_tbody.html.erb
@@ -1,2 +1,7 @@
-<td><%= model.name %></td>
+<td>
+  <span><%= model.name %></span>
+  <%= link_to({ action: 'new', factory_taxon_id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.new') }, class: 'button is-small is-rounded is-light') do %>
+    <i class="fa-solid fa-plus has-text-primary"></i>
+  <% end %>
+</td>
 <td colspan="3"></td>
