--- a/app/views/factory/admin/productions/_form.html.erb
+++ b/app/views/factory/admin/productions/_form.html.erb
@@ -1,4 +1,13 @@
-<%= f.text_field :name %>
+<div class="field is-horizontal">
+  <%= f.label :name %>
+  <div class="field-body">
+    <div class="field has-addons">
+      <div class="control"><div class="button is-static"><%= @product.name %></div></div>
+      <%= f.text_field :name, label: nil, all: { normal: nil }, wrap: { input: 'control' } %>
+    </div>
+  </div>
+</div>
+
 <%= f.number_field :cost_price %>
 <%= f.number_field :profit_price %>
 <%= f.text_field :link %>
