--- a/app/views/factory/admin/productions/index.html.erb
+++ b/app/views/factory/admin/productions/index.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'product_bar', locals: { product: @product } %>
 <%= render 'button' %>
 
 <%= render layout: 'index_table' do %>
