--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -2,7 +2,7 @@
 <td>
   <div class="is-several">
     <%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-32x32' if model.logo.attached? %>
-    <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, text: true) do %>
+    <%= link_to({ action: 'show', id: model.id }, aria: { label: t('factory.admin.products.show.title') }, text: true) do %>
       <span><%= model.name %></span>
       <span class="tag is-light">
         <i class="fa-solid fa-clone"></i>
