--- a/app/views/factory/admin/products/show.html.erb
+++ b/app/views/factory/admin/products/show.html.erb
@@ -1,4 +1,4 @@
 
 <%= render partial: 'product_bar', locals: { product: @product } %>
 
-<%= render partial: 'show' %>
+<%= render partial: 'show_no_frame' %>
