--- a/app/views/factory/our/productions/_members/_cart.html.erb
+++ b/app/views/factory/our/productions/_members/_cart.html.erb
@@ -9,7 +9,7 @@
     <% end if item.number > 1 %>
   </div>
   <div class="control">
-    <%= button_to({ controller: 'trade/our/items', action: 'destroy', id: item.id }, method: :delete, state: 'redirect_return', class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
+    <%= button_to({ controller: 'trade/our/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart.id }, state: 'redirect_return', class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
       <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
     <% end if item.number <= 1 %>
   </div>
