--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -16,6 +16,9 @@
   <p><%= model.brand&.name %></p>
 </td>
 <td>
+  <%= model.covers_attachments.size %>
+</td>
+<td>
   <% model.product_part_taxons.each do |product_part_taxon| %>
     <p>
       <span><%= product_part_taxon.name %></span>
