--- a/app/views/factory/productions/_index/_card.html.erb
+++ b/app/views/factory/productions/_index/_card.html.erb
@@ -1,11 +1,14 @@
 <div class="card">
   <div class="card-image">
     <figure class="image is-1by1">
-      <%= image_tag production.product.logo if production.product.logo.attached? %>
+      <%= image_tag model.product.logo if model.product.logo.attached? %>
     </figure>
   </div>
   <div class="card-content has-text-centered">
-    <h2 class="title has-text-danger"><%= production.price.to_money.format.html_safe %></h2>
-    <%= link_to production.name, { action: 'show', id: production.id } %>
+    <h2 class="title has-text-danger"><%= model.price.to_money.format.html_safe %></h2>
+    <%= link_to model.name, { action: 'show', id: model.id } %>
+  </div>
+  <div class="card-footer">
+    <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: @cart && @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) } %>
   </div>
 </div>
