--- a/app/views/factory/productions/index.html.erb
+++ b/app/views/factory/productions/index.html.erb
@@ -1,3 +1,3 @@
 <div class="cards is-4">
-  <%= render partial: 'card', collection: @productions, as: :production %>
+  <%= render partial: 'card', collection: @productions, as: :model, locals: { item_con: 'trade/my/items' } %>
 </div>
