--- a/app/views/factory/productions/_base/_cart.html.erb
+++ b/app/views/factory/productions/_base/_cart.html.erb
@@ -29,13 +29,8 @@
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
   <%= f.hidden_field :station_id, value: params[:station_id] %>
   <%= f.hidden_field :desk_id, value: params[:desk_id] %>
-  <%= button_tag do %>
-    <i class="fa-solid fa-cart-plus fa-xl has-text-primary"></i>
+  <%= button_tag class: 'button is-danger' do %>
+    <i class="fa-solid fa-cart-plus"></i>
+    <span class="pl-1"><%= t('trade.my.items.create.title') %></span>
   <% end %>
 <% end unless item %>
-
-<%= form_with theme: nil, url: { controller: 'trade/my/items', action: 'create' } do |f| %>
-  <%= f.hidden_field :good_type, value: @production.class_name %>
-  <%= f.hidden_field :good_id, value: @production.id %>
-  <%= f.submit t('.add'), class: 'button is-danger' %>
-<% end %>
