--- a/app/views/factory/agent/productions/index.html.erb
+++ b/app/views/factory/agent/productions/index.html.erb
@@ -5,5 +5,5 @@
   </div>
 </div>
 <div class="column is-narrow">
-  <%= render partial: 'cart_nav', locals: { cart_con: 'trade/my/carts' } %>
+  <%= render partial: 'cart_nav', locals: { cart_con: 'trade/agent/carts' } %>
 </div>
