--- a/app/views/factory/productions/_base/_cart_nav.html.erb
+++ b/app/views/factory/productions/_base/_cart_nav.html.erb
@@ -5,7 +5,9 @@
   </div>
   <% @cart.items.each do |item| %>
     <div>
-      <%= image_tag item.good.logo, class: 'image is-32x32' if item.good.logo.attached? %>
+      <div class="is-several">
+        <%= image_tag item.good.logo, class: 'image is-32x32' if item.good.logo.attached? %>
+      </div>
       <span><%= item.good_name %></span>
       <span>*</span>
       <span><%= item.number %></span>
