--- a/app/views/factory/admin/scenes/_index/_cart.html.erb
+++ b/app/views/factory/admin/scenes/_index/_cart.html.erb
@@ -1,5 +1,5 @@
 <% scene_automatic = @scene_automatics.find(&->(i){ i.scene_id == model.id }) %>
-<%= button_to({ controller: 'scene_automatics', action: 'update', scene_id: model.id, id: scene_automatic.id }, method: :patch, params: { '[scene_automatic]advance_days': scene_automatic.advance_days - 1 }, class: 'mr-1') do %>
+<%= button_to({ controller: 'scene_automatics', action: 'update', scene_id: model.id, id: scene_automatic.id }, method: :patch, params: { 'scene_automatic[advance_days]': scene_automatic.advance_days - 1 }, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
 <% end if scene_automatic && scene_automatic.advance_days > 1 %>
 <%= button_to({ controller: 'scene_automatics', action: 'destroy', scene_id: model.id, id: scene_automatic.id }, method: :delete, class: 'mr-1') do %>
@@ -13,6 +13,6 @@
     <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
   <% end %>
 <% end unless scene_automatic %>
-<%= button_to({ controller: 'scene_automatics', action: 'update', scene_id: model.id, id: scene_automatic.id }, method: :patch, params: { '[scene_automatic]advance_days': scene_automatic.advance_days + 1 }, class: 'ml-1') do %>
+<%= button_to({ controller: 'scene_automatics', action: 'update', scene_id: model.id, id: scene_automatic.id }, method: :patch, params: { 'scene_automatic[advance_days]': scene_automatic.advance_days + 1 }, class: 'ml-1') do %>
   <i class="fa-solid fa-circle-plus fa-xl has-text-dark-grey"></i>
 <% end if scene_automatic %>
