--- a/app/views/factory/productions/_base/_cart.html.erb
+++ b/app/views/factory/productions/_base/_cart.html.erb
@@ -8,7 +8,7 @@
 <%= button_to({ controller: item_con, action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart.id }, state: 'redirect_return', class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-dark-grey"></i>
 <% end if item && item.number <= 1 %>
-<%= form_with theme: nil, scope: 'item', url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { controller: 'input', turbo_scroll: true }, class: 'field' do |f| %>
+<%= form_with theme: nil, scope: 'item', url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { controller: 'input', turbo_scroll: true } do |f| %>
   <%= f.hidden_field :current_cart_id, value: @cart.id %>
   <%= f.number_field :number, value: item.number.to_fs(:rounded, precision: 0), data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 2.5em; height: 80%' %>
 <% end if item %>
@@ -29,7 +29,7 @@
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
   <%= f.hidden_field :station_id, value: params[:station_id] %>
   <%= f.hidden_field :desk_id, value: params[:desk_id] %>
-  <%= button_tag class: 'button is-danger' do %>
+  <%= button_tag class: 'button is-small is-danger' do %>
     <i class="fa-solid fa-cart-plus"></i>
     <span class="pl-1"><%= t('trade.my.items.create.title') %></span>
   <% end %>
