--- a/app/views/factory/productions/_index/_card.html.erb
+++ b/app/views/factory/productions/_index/_card.html.erb
@@ -8,7 +8,7 @@
     <h2 class="title has-text-danger"><%= model.price.to_money.format.html_safe %></h2>
     <%= link_to model.name, { action: 'show', id: model.id } %>
   </div>
-  <div class="card-footer">
+  <div class="card-footer py-2">
     <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: @cart && @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) } %>
   </div>
 </div>
