--- a/app/views/factory/admin/product_taxons/_base/_factory_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_factory_tr.html.erb
@@ -2,7 +2,7 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
-      <%= link_to({ action: 'new', factory_taxon_id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.new') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ action: 'new', factory_taxon_id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.new.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-plus has-text-primary"></i>
       <% end %>
     </div>
