--- a/app/views/factory/admin/production_items/_actions.html+phone.erb
+++ b/app/views/factory/admin/production_items/_actions.html+phone.erb
@@ -1,10 +1,10 @@
 <%= link_to({ action: 'edit', id: model.id }, class: 'weui-actionsheet__cell') do %>
   <i class="fa-solid fa-pencil"></i>
-  <span><%= t('.edit') %></span>
+  <span><%= t('.edit.title') %></span>
 <% end %>
 <%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'has-text-danger', form: { turbo_confirm: t('.confirm'), class: 'weui-actionsheet__cell weui-actionsheet__cell_warn' }) do %>
   <i class="fa-solid fa-trash"></i>
-  <span><%= t('.destroy') %></span>
+  <span><%= t('.destroy.title') %></span>
 <% end %>
 <div
   data-controller="mini-program"
