--- a/app/views/factory/admin/production_items/_delivery/_index_tr.html.erb
+++ b/app/views/factory/admin/production_items/_delivery/_index_tr.html.erb
@@ -8,7 +8,7 @@
       <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-print has-text-info"></i>
       <% end %>
-      <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
     </div>
