--- a/app/views/factory/admin/production_items/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/production_items/_index/_index_tr.html.erb
@@ -8,13 +8,13 @@
       <%= button_to({ controller: 'production_items', action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-print has-text-info"></i>
       <% end %>
-      <%= link_to({ controller: 'production_items', action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ controller: 'production_items', action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
-      <%= link_to({ controller: 'production_items', action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ controller: 'production_items', action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil has-text-link"></i>
       <% end %>
-      <%= button_to({ controller: 'production_items', action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.confirm') } }) do %>
+      <%= button_to({ controller: 'production_items', action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy.title') }, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.confirm') } }) do %>
         <i class="fa-solid fa-trash has-text-danger"></i>
       <% end %>
     </div>
