--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -27,10 +27,10 @@
         <%= link_to({ controller: 'stock_logs', production_id: model.id }, aria: { label: t('factory.admin.stock_logs.index.title') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-clock-rotate-left has-text-info"></i>
         <% end %>
-        <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+        <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-circle-info has-text-info"></i>
         <% end %>
-        <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal', turbo_scroll: true }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
+        <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal', turbo_scroll: true }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-pencil has-text-info"></i>
         <% end %>
       </div>
