--- a/app/views/factory/admin/productions/_taxon/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_taxon/_index_tr.html.erb
@@ -17,10 +17,10 @@
         <% end %>
       </div>
       <div class="mt-2">
-        <%= link_to({ action: 'show', id: model.id, product_id: model.product_id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+        <%= link_to({ action: 'show', id: model.id, product_id: model.product_id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-circle-info has-text-info"></i>
         <% end %>
-        <%= link_to({ action: 'edit', id: model.id, product_id: model.product_id }, data: { turbo_frame: 'modal', turbo_scroll: true }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
+        <%= link_to({ action: 'edit', id: model.id, product_id: model.product_id }, data: { turbo_frame: 'modal', turbo_scroll: true }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-pencil has-text-info"></i>
         <% end %>
       </div>
