--- a/app/views/factory/admin/products/_actions.html.erb
+++ b/app/views/factory/admin/products/_actions.html.erb
@@ -1,6 +1,6 @@
 <%= link_to({ action: 'edit', id: model.id }, class: 'weui-actionsheet__cell') do %>
   <i class="fa-solid fa-pencil"></i>
-  <span><%= t('.edit') %></span>
+  <span><%= t('.edit.title') %></span>
 <% end %>
 <%= link_to({ controller: 'productions', product_id: model.id }, class: 'weui-actionsheet__cell') do %>
   <i class="fa-regular fa-clone"></i>
