--- a/app/views/factory/admin/products/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tr.html.erb
@@ -6,7 +6,7 @@
         <i class="fa-solid fa-gears"></i>
         <span class="pl-1"><%= model.fits_count %></span>
       <% end %>
-      <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil has-text-link"></i>
       <% end %>
     </div>
