--- a/app/views/factory/admin/providers/index.html.erb
+++ b/app/views/factory/admin/providers/index.html.erb
@@ -5,7 +5,7 @@
       <th></th>
       <th>
         <%= link_to new_admin_provider_path, class: 'ui teal button' do %>
-          <i class="fa-solid fa-plus"></i><%= t('.new') %>
+          <i class="fa-solid fa-plus"></i><%= t('.new.title') %>
         <% end %>
       </th>
     </tr>
