--- a/app/views/factory/in/product_taxons/_index/_index_tr.html.erb
+++ b/app/views/factory/in/product_taxons/_index/_index_tr.html.erb
@@ -5,7 +5,7 @@
       <%= link_to({ controller: 'productions', factory_taxon_id: model.id }, aria: { label: t('factory.in.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-sign-in-alt"></i>
       <% end %>
-      <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info"></i>
       <% end %>
     </div>
