--- a/app/views/factory/in/product_taxons/_productions/_production_tr.html.erb
+++ b/app/views/factory/in/product_taxons/_productions/_production_tr.html.erb
@@ -8,7 +8,7 @@
       <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, data: { turbo_frame: '_top' }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-clone"></i>
       <% end %>
-      <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info"></i>
       <% end %>
     </div>
