--- a/app/views/factory/panel/scenes/_actions.html.erb
+++ b/app/views/factory/panel/scenes/_actions.html.erb
@@ -1,10 +1,10 @@
 <%= link_to({ action: 'edit', id: model.id }, class: 'weui-actionsheet__cell') do %>
   <i class="fa-solid fa-pencil"></i>
-  <span><%= t('.edit') %></span>
+  <span><%= t('.edit.title') %></span>
 <% end %>
 <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { turbo_confirm: t('.confirm') }, class: 'has-text-danger', form: { class: 'weui-actionsheet__cell weui-actionsheet__cell_warn' }) do %>
   <i class="fa-solid fa-trash"></i>
-  <span><%= t('.destroy') %></span>
+  <span><%= t('.destroy.title') %></span>
 <% end %>
 <%= link_to({ controller: 'produce_plans', scene_id: model.id }, class: 'weui-actionsheet__cell') do %>
   <i class="fa-regular fa-hammer"></i>
