--- a/app/views/factory/admin/part_plans/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/part_plans/_index/_breadcrumb.html.erb
@@ -1,7 +1,3 @@
-<div class="breadcrumb has-succeeds-separator">
-  <ul>
-    <li><%= link_to t('factory.admin.parts.index.title'), { controller: 'parts' } %></li>
-    <li><span class="px-3"><%= @part.name %></span></li>
-    <li class="is-active"><%= t('.title') %></li>
-  </ul>
-</div>
+<li><%= link_to t('.parts.index.title'), { controller: 'parts' } %></li>
+<li><span class="px-3"><%= @part.name %></span></li>
+<li class="is-active"><%= t('.title') %></li>
