--- a/app/views/factory/admin/part_providers/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/part_providers/_index/_breadcrumb.html.erb
@@ -1,9 +1,5 @@
-<div class="breadcrumb has-succeeds-separator">
-  <ul>
-    <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products' } %></li>
-    <li><span class="px-3"><%= @production.product.name %></span></li>
-    <li><%= link_to t('factory.admin.productions.index.title'), { controller: 'productions', product_id: @production.product_id } %></li>
-    <li><%= link_to @production.name, { controller: 'productions', action: 'show', product_id: @production.product_id, id: @production.id } %></li>
-    <li class="is-active"><%= t('.title') %></li>
-  </ul>
-</div>
+<li><%= link_to t('.products.index.title'), { controller: 'products' } %></li>
+<li><span class="px-3"><%= @production.product.name %></span></li>
+<li><%= link_to t('.productions.index.title'), { controller: 'productions', product_id: @production.product_id } %></li>
+<li><%= link_to @production.name, { controller: 'productions', action: 'show', product_id: @production.product_id, id: @production.id } %></li>
+<li class="is-active"><%= t('.title') %></li>
