--- a/app/views/factory/admin/produce_plans/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/produce_plans/_index/_breadcrumb.html.erb
@@ -1,7 +1,3 @@
-<div class="breadcrumb has-succeeds-separator">
-  <ul>
-    <li><%= link_to t('factory.admin.scenes.index.title'), { controller: 'scenes', anchor: "tr_#{params[:scene_id]}" } %></li>
-    <li class="is-active mr-2"><%= @scene.title %></li>
-    <li class="is-active"><%= t('.title') %></li>
-  </ul>
-</div>
+<li><%= link_to t('.scenes.index.title'), { controller: 'scenes', anchor: "tr_#{params[:scene_id]}" } %></li>
+<li class="is-active mr-2"><%= @scene.title %></li>
+<li class="is-active"><%= t('.title') %></li>
