--- a/app/views/factory/admin/product_parts/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/product_parts/_index/_breadcrumb.html.erb
@@ -1,6 +1,2 @@
-<div class="breadcrumb has-succeeds-separator">
-  <ul>
-    <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products' } %></li>
-    <li class="is-active"><%= t('.title') %></li>
-  </ul>
-</div>
+<li><%= link_to t('.products.index.title'), { controller: 'products' } %></li>
+<li class="is-active"><%= t('.title') %></li>
