--- a/app/views/factory/admin/production_items/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/production_items/_index/_breadcrumb.html.erb
@@ -1,15 +1,11 @@
-<div class="breadcrumb has-succeeds-separator">
-  <ul>
-    <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
-    <li><span class="px-3"><%= @production.product_taxon.name %></span></li>
-    <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products', product_taxon_id: @production.product_taxon_id, anchor: "tr_#{@production.product_id}" } %></li>
-    <li><span class="px-3"><%= @production.product.name %></span></li>
-    <li>
-      <%= link_to({ controller: 'productions', product_id: @production.product_id }) do %>
-        <span><%= t('factory.admin.productions.index.title') %></span>
-        <span>（<%= @production.name %>）</span>
-      <% end %>
-    </li>
-    <li class="is-active"><%= t('.title') %></li>
-  </ul>
-</div>
+<li><%= link_to t('.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
+<li><span class="px-3"><%= @production.product_taxon.name %></span></li>
+<li><%= link_to t('.products.index.title'), { controller: 'products', product_taxon_id: @production.product_taxon_id, anchor: "tr_#{@production.product_id}" } %></li>
+<li><span class="px-3"><%= @production.product.name %></span></li>
+<li>
+  <%= link_to({ controller: 'productions', product_id: @production.product_id }) do %>
+    <span><%= t('.productions.index.title') %></span>
+    <span>（<%= @production.name %>）</span>
+  <% end %>
+</li>
+<li class="is-active"><%= t('.title') %></li>
