--- a/app/views/factory/admin/production_items/_plan/_breadcrumb.html.erb
+++ b/app/views/factory/admin/production_items/_plan/_breadcrumb.html.erb
@@ -1,19 +1,15 @@
-<div class="breadcrumb has-succeeds-separator">
-  <ul>
-    <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products' } %></li>
-    <li><%= link_to @production.product.name, { controller: 'products', id: @production.product_id } %></li>
-    <li>
-      <%= link_to({ controller: 'productions', product_id: @production.product_id }) do %>
-        <span><%= t('factory.admin.productions.index.title') %></span>
-        <span>（<%= @production.name %>）</span>
-      <% end %>
-    </li>
-    <li>
-      <%= link_to({ controller: 'production_plans', production_id: @production.id }) do %>
-        <span><%= t('factory.admin.production_plans.index.title') %></span>
-        <span>（<%= @production_plan.produce_on %>）</span>
-      <% end %>
-    </li>
-    <li class="is-active"><%= t('.title') %></li>
-  </ul>
-</div>
+<li><%= link_to t('.products.index.title'), { controller: 'products' } %></li>
+<li><%= link_to @production.product.name, { controller: 'products', id: @production.product_id } %></li>
+<li>
+  <%= link_to({ controller: 'productions', product_id: @production.product_id }) do %>
+    <span><%= t('.productions.index.title') %></span>
+    <span>（<%= @production.name %>）</span>
+  <% end %>
+</li>
+<li>
+  <%= link_to({ controller: 'production_plans', production_id: @production.id }) do %>
+    <span><%= t('.production_plans.index.title') %></span>
+    <span>（<%= @production_plan.produce_on %>）</span>
+  <% end %>
+</li>
+<li class="is-active"><%= t('.title') %></li>
