--- a/app/views/factory/admin/scenes/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/scenes/_index/_index_tr.html.erb
@@ -4,7 +4,7 @@
     <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ controller: 'produce_plans', scene_id: model.id }, class: 'button is-small is-rounded is-info') do %>
         <i class="fa-solid fa-hammer"></i>
-        <span class="pl-1"><%= t('factory.admin.produce_plans.index.title') %></span>
+        <span class="pl-1"><%= t('.produce_plans.index.title') %></span>
       <% end %>
     </div>
   </td>
