--- a/app/views/factory/admin/purchase_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_index_tbody.html.erb
@@ -5,3 +5,4 @@
 <td>
   <p><%= model.member&.name %></p>
 </td>
+<td><time data-controller="time"><%= model.created_at.to_fs(:iso8601) %></time></td>
