--- a/app/views/factory/admin/purchase_items/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_index_thead.html.erb
@@ -6,3 +6,4 @@
   <p><%= Trade::Item.human_attribute_name(:member_id) %></p>
   <p><%= Trade::Item.human_attribute_name(:member_organ_id) %></p>
 </th>
+<th><%= Trade::Item.human_attribute_name(:created_at) %></th>
