add bread crumb to production

--- a/app/views/factory/admin/products/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/products/_index/_breadcrumb.html.erb
@@ -1,4 +1,4 @@
-<li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'product_taxons', anchor: "tr_#{@product_taxon.id}" } %></li>
+<li><%= link_to t('.product_taxons.index.title'), { controller: 'product_taxons', anchor: "tr_#{@product_taxon.id}" } %></li>
 <li>
   <div class="px-3">
     <span><%= @product_taxon.name %></span>
