--- a/app/views/factory/admin/products/_show/_breadcrumb.html.erb
+++ b/app/views/factory/admin/products/_show/_breadcrumb.html.erb
@@ -1,6 +1,2 @@
-<div class="breadcrumb has-succeeds-separator">
-  <ul>
-    <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products' } %></li>
-    <li class="is-active"><%= @product.name %></li>
-  </ul>
-</div>
+<li><%= link_to t('.products.index.title'), { controller: 'products' } %></li>
+<li class="is-active"><%= @product.name %></li>
