--- a/app/views/factory/admin/base/_nav.html.erb
+++ b/app/views/factory/admin/base/_nav.html.erb
@@ -1,5 +1,5 @@
 <aside class="menu-wrap is-dark">
   <%= render 'brand_nav' %>
   <%= render 'factory_nav' %>
-  <%= render 'in/trade_nav' if defined? RailsTradae %>
+  <%= render 'in/trade_nav' if defined? RailsTrade %>
 </aside>
